--- a/assets/css/styles-uw-cerse.css
+++ b/assets/css/styles-uw-cerse.css
@@ -1,5 +1,8 @@
 /* UW CERSE */
 :root {
+  --font-family: "Noto Sans", sans-serif;
+  --headline-font-family: "Sofia Sans", sans-serif;
+  --secondary-font-family: "Noto Sans Mono", sans-serif;
   --primary-color: #2a2d34;
   --markup-color: #dbd8f3;
   --project-color: #332a86;
@@ -55,6 +58,10 @@ h1.case-study-title {
   justify-content: space-evenly;
 }
 
+.findings-recommendations-container {
+  align-items: start;
+}
+
 .findings-container.box {
   background-color: transparent;
   border-radius: 0; 
@@ -63,7 +70,8 @@ h1.case-study-title {
 }
 
 .recommendations-container.box { 
-  border-bottom: none; margin: auto; 
+  border-bottom: none; 
+  /* margin: auto;  */
 }
 
 /* 
@@ -124,11 +132,66 @@ h1.case-study-title {
 .interviews .box {  padding: 0;  background-color: transparent; }
 .interview { width: 400px;  height: 420px; }
 
-.interview-image {
+/* .interview-image {
   width: auto;
   height: 400px;
   border-radius: 2ch;
+} */
+
+.interview-image {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+  border-radius: 2ch; 
+  /* aspect-ratio: auto; */
+  background-color: white;
 }
+
+.hoverable { background-color: transparent; border-radius: 0; }
+.dashboard p {  margin-bottom: 0; }
+
+span.quotation {
+  font-size: 2.5rem;
+  font-family: var(--secondary-font-family);
+  line-height: 0; 
+}
+
+.dashboard .interview-image-overlay {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 100%;
+  width: 100%;
+  opacity: 0;
+  transition: 1s ease;
+  background-color: var(--image-background-color);
+  border-radius: 2ch;
+  padding: 2rem; 
+}
+
+.container:hover .interview-image-overlay {
+  opacity: 1;
+}
+
+/* interview bento */
+@media (min-width: 768px) {
+  .dashboard { grid-template-columns: repeat(6, 1fr); }
+  .profile { --gc: span 4; }
+  .schedule-table { --gc: span 2; }
+  .exercise-table { --gc: span 2; --gr: span 2; }
+  .calories { --gc: span 2;--gr: span 2; }
+  .quote-box { --gc: span 2; }
+  .personal-bests { --gc: span 2; }
+  .activity-feed { --gc: span 3; }
+}
+
+.dashboard .list {
+  padding-left: 0; 
+}
+
+.exercise-table, .calories, .schedule-table { padding: 0; }
 
 /* div.column {  width: 50%;} */
 
@@ -411,7 +474,7 @@ ul.key-takeaways, ul.next-steps {
 
   .hotdog { width: 95%;  height: auto; }
   .flip-image-back { padding: 1.5rem 1rem; }
-  .flip-image-back p, .flip-image-back ul, .two-bento-box ol { font-size: 0.75rem; }
+  .flip-image-back p, .flip-image-back .list li, .two-bento-box ol { font-size: 0.75rem; }
   .flip-image-back ul { margin: 0; }
   .interview { width: 100%; }
 
@@ -421,6 +484,8 @@ ul.key-takeaways, ul.next-steps {
     margin: auto; 
     padding-left:1rem;
   }
+
+  .dashboard .interview-image-overlay p, .activity-feed p, .dashboard .image-caption {  font-size: 0.75rem; }
 
   .two-bento-box .flip-image-back, .comp-analysis .flip-image-back { padding: 1.5rem 2rem; }
 
