--- a/assets/css/styles-uw-cerse.css
+++ b/assets/css/styles-uw-cerse.css
@@ -82,76 +82,17 @@ h1.case-study-title {
   flip image
   Source: https://www.w3schools.com/howto/tryit.asp?filename=tryhow_css_flip_image2 
 */
-.flip-image {
-  background-color: transparent;
-  width: 600px;
-  height: 375px;
-}
-
-.flip-image-inner {
-  position: relative;
-  width: 100%;
-  height: 100%;
-  text-align: left;
-  transition: transform 0.8s;
-  transform-style: preserve-3d;
-}
-
-.flip-image:hover .flip-image-inner {
-  transform: rotateY(180deg);
-}
-
-.flip-image-front {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  width: inherit;
-  -webkit-backface-visibility: hidden;
-  backface-visibility: hidden;
-  align-items: center;
-  justify-content: center;
-}
-
-.flip-image.interview .flip-image-front {
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-}
-
-.flip-image-back {
-  padding: 2rem;
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  -webkit-backface-visibility: hidden;
-  backface-visibility: hidden;
-  background-color: var(--image-background-color);
-  color: var(--primary-color);
-  transform: rotateY(180deg);
-  border-radius: 2ch;
-  width: 500px;
-  height: 375px;
-}
-
-.interviews .box {  padding: 0;  background-color: transparent; }
-.interview { width: 400px;  height: 420px; }
-
-/* .interview-image {
-  width: auto;
-  height: 400px;
-  border-radius: 2ch;
-} */
 
 .interview-image {
   width: 100%;
   height: 100%;
   object-fit: contain;
   border-radius: 2ch; 
-  /* aspect-ratio: auto; */
+  aspect-ratio: auto;
   background-color: white;
 }
 
-.hoverable { background-color: transparent; border-radius: 0; }
+.dashboard .hoverable { background-color: white; border-radius: 0; }
 .dashboard p {  margin-bottom: 0; }
 
 span.quotation {
@@ -181,50 +122,42 @@ span.quotation {
 
 /* interview bento */
 @media (min-width: 768px) {
-  .dashboard { grid-template-columns: repeat(6, 1fr); }
-  .profile { --gc: span 4; }
-  .schedule-table { --gc: span 2; }
-  .exercise-table { --gc: span 2; --gr: span 2; }
-  .calories { --gc: span 2;--gr: span 2; }
+  .dashboard { grid-template-columns: repeat(7, 1fr); }
+  .interview-questions { --gc: span 4; }
+  .interview-poc { --gc: span 3; }
   .quote-box { --gc: span 2; }
-  .personal-bests { --gc: span 2; }
-  .activity-feed { --gc: span 3; }
+  .interview-rabbit-hole { --gc: span 3; }
+  .interview-quote { --gc: span 2; }
 }
 
 .dashboard .list {
   padding-left: 0; 
 }
 
-.exercise-table, .calories, .schedule-table { padding: 0; }
+.interview-poc, .interview-codebook, .interview-themes { padding: 0; }
+.interview-poc, .interview-rabbit-hole, .quote-box { background-color : white; }
+.quote-box p { font-size: 0.9rem; }
 
 /* div.column {  width: 50%;} */
 
 /* bento box
 Source: https://codepen.io/stoumann/pen/GRzWVjZ
 */
-.bento-box {
-  display: grid;
-  gap: 2ch;
-  & > * {
-    background: var(--bg, var(--image-background-color));
-    border-radius: 2ch;
-    color: hsl(215, 75%, 10%);
-    container-type: inline-size;
-    grid-column: var(--gc, auto);
-    grid-row: var(--gr, auto);
-    padding: 2ch;
-    & h2 {
-      margin-block: 0 1ch;
-    }
-  }
+
+.survey-insight-container { 
+  display: flex;
+  gap: 2rem; 
 }
 
-.survey-image {  border-radius: 1ch;  object-fit: contain; }
-.bento {  display: flex;  justify-content: center;  align-items: center; }
-.bento-hotdog { width: 100%;  height: 100%; }
-.bento-hamburger {  width: 100%;  height: 370px; }
-.hotdog {  height: 95%; }
-.hamburger {  width: 95%; }
+.survey-insight-image {
+  width: 45vw;
+  height: auto; 
+  border-radius: 2ch; 
+}
+
+.survey-insights .bb-box {
+  aspect-ratio: auto;
+}
 
 .competitive-analysis-container {
   display: flex;
@@ -246,14 +179,18 @@ Source: https://codepen.io/stoumann/pen/GRzWVjZ
   max-width: 50vw; 
 }
 
+.findings-recommendations-grid .recommendations-container.box {
+  background-color: var(--image-background-color);
+}
+
 /* responsive bento box */
-@media (min-width: 768px) {
+/* @media (min-width: 768px) {
   .bento-box { grid-template-columns: repeat(7, 1fr); }
   .bb3 { --gc: span 4; --gr: span 2; }
   .bb4 { --gc: span 3; --gr: span 2; }
   .bb1 { --gc: span 3; --gr: span 2; }
   .bb2 { --gc: span 4; --gr: span 2; }
-}
+} */
 
 /* --------------------------------------------- IDEATION SECTION --------------------------------------------------------------------- */
 /* 
@@ -340,7 +277,7 @@ Source: https://codepen.io/stoumann/pen/GRzWVjZ
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  border-bottom: 2px dashed var(--secondary-shadow);
+  /* border-bottom: 2px dashed var(--secondary-shadow); */
 }
 
 .iteration-image {
@@ -442,9 +379,18 @@ Source: https://codepen.io/stoumann/pen/GRzWVjZ
   color: var(--primary-color);
 }
 
+#final-designs {
+  max-width: 80vw;
+}
+
 .final-design-image {
   border-radius: 2ch;
-  width: 70vw !important;
+  width: 55vw !important;
+}
+
+.final-design-container {
+  display: flex;
+  gap: 2rem; 
 }
 
 
@@ -476,10 +422,10 @@ ul.key-takeaways, ul.next-steps {
   .bb-bento-box { flex-direction: column; }
   .bb-box {  aspect-ratio: auto; }
 
-  .hotdog { width: 95%;  height: auto; }
-  .flip-image-back { padding: 1.5rem 1rem; }
+
+  /* .flip-image-back { padding: 1.5rem 1rem; }
   .flip-image-back p, .flip-image-back .list li, .two-bento-box ol { font-size: 0.75rem; }
-  .flip-image-back ul { margin: 0; }
+  .flip-image-back ul { margin: 0; } */
   .interview { width: 100%; }
 
   .two-bento-box { gap: 1rem; }
